--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ description="GPS plugin for NetKet introducing new models, optimizers and Fermio
 readme = "README.md"
 requires-python = ">=3.9"
 dependencies = [
-    "netket~=3.9",
+    "netket>3.5",
 ]
 authors=[
     {name = "Yannick Rath"},
