--- a/scripts/cpd-backflow/environment.yml
+++ b/scripts/cpd-backflow/environment.yml
@@ -6,7 +6,11 @@ dependencies:
   - python=3.11
   - pip
   - pip:
-    - netket[mpi]
+    - jax==0.4.34
+    - jaxlib==0.4.34
+    - mpi4jax==0.5.4
+    - mpi4py==4.0.1
+    - netket[mpi]==3.14.3
     - pyscf==2.5.0
     - ml-collections
     - git+https://github.com/BoothGroup/GPSKet.git#egg=GPSKet
